test/files/pos/t1459/AbstractBase.java
package base;

public abstract class AbstractBase {
    public abstract void doStuff(String... params); // !!! was Object..
}